<resources>
    <string name="app_name" translatable="false">ChatOFG</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">Test</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_chat_ofg" translatable="false">ChatOFG</string>
	<string name="login_hostname">IP Address (hostname)</string>
    <string name="login_port">Port</string>
    <string name="login_name">Name</string>
    <string name="login_login">Login</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="co_connect">Connect</string>
    <string name="login_error_fields">Not all fields are filled in</string>
    <string name="co_message">Message</string>
    <string name="co_send">Send</string>
    <string name="login_error_connect">Failed to connect</string>
    <string name="co_error_send">Failed to send message</string>
    <string name="co_disconnect">Disconnect</string>
	<string name="co_no_connection">No connection established</string>
    <string name="co_disconnected">Disconnected</string>
    <string name="co_kick">Kick</string>
    <string name="dialog_confirm">Confirm</string>
    <string name="text_input_title">Enter text</string>
    <string name="co_reason">Reason</string>
    <string name="co_reconnect">Reconnect</string>
    <string name="login_error_connecting">Connection is already in progress</string>
    <string name="co_remove">Remove</string>
    <string name="co_history">Connection history</string>
    <string name="co_broadcast">Broadcast message</string>
    <string name="co_broadcast_send">Broadcast</string>
    <string name="co_custom_message">Custom message</string>
    <string name="text">Text</string>
    <string name="login_no_name">No name</string>
    <string name="co_users">Users</string>
</resources>