<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
												   xmlns:app="http://schemas.android.com/apk/res-auto"
												   android:layout_width="match_parent"
												   android:layout_height="match_parent">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginStart="24dp"
		android:layout_marginTop="16dp"
		android:layout_marginEnd="24dp"
		android:layout_marginBottom="24dp"
		android:orientation="vertical"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent">

		<EditText
			android:id="@+id/editHostname"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:autofillHints="hostname"
			android:ems="10"
			android:hint="@string/login_hostname"
			android:inputType="text"
			android:minHeight="48dp" />

		<EditText
			android:id="@+id/editPort"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:autofillHints="port"
			android:ems="10"
			android:hint="@string/login_port"
			android:inputType="number"
			android:minHeight="48dp" />

		<CheckBox
			android:id="@+id/check_no_name"
			android:layout_width="match_parent"
			android:layout_height="wrap_content" android:text="@string/login_no_name"/>

		<EditText
			android:id="@+id/editName"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:autofillHints="username"
			android:ems="10"
			android:hint="@string/login_name"
			android:inputType="text"
			android:minHeight="48dp" />
	</LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>